--- a/arxiv/2024_05_arxiv.html
+++ b/arxiv/2024_05_arxiv.html
@@ -62,6 +62,104 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.00765">https://arxiv.org/pdf/2405.00765</a></span> Schwinger-Keldysh nonequilibrium quantum field theory of open quantum systems beyond the Markovian regime: Application to the spin-boson model ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.00785">https://arxiv.org/pdf/2405.00785</a></span> Quasi-Nambu-Goldstone modes in many-body scar models</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.00745">https://arxiv.org/pdf/2405.00745</a></span> Non-perturbative signatures of fractons in the twisted multi-flavor Schwinger Model (Philipp Hauke)</p>
+<br>
+<p class="p1">20240506</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.01622">https://arxiv.org/pdf/2405.01622</a></span> Interacting quasiperiodic spin chains in the prethermal regime (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.01627">https://arxiv.org/pdf/2405.01627</a></span> Dynamical Freezing in Exactly Solvable Models of Driven Chaotic Quantum Dots (Haoyu Guo, Rohit Mukherjee, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.01829">https://arxiv.org/pdf/2405.01829</a></span> Fractional quantum anomalous Hall effect in a semimetal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02248">https://arxiv.org/pdf/2405.02248</a></span> Fractonic criticality in Rydberg atom arrays</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02149">https://arxiv.org/pdf/2405.02149</a></span> Piezoresistivity as an Order Parameter for Ferroaxial Transitions (Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.01642">https://arxiv.org/pdf/2405.01642</a></span> Floquet engineered inhomogeneous quantum chaos in critical systems (Bastien Lapierre, Tokiro Numasawa, Titus Neupert, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.01773">https://arxiv.org/pdf/2405.01773</a></span> “Observables” in de Sitter Quantum Gravity: in Perturbation Theory and Beyond (Tom Banks)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02227">https://arxiv.org/pdf/2405.02227</a></span> Comparing the decoherence effects due to black holes versus ordinary matter (Juan Maldacena)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02224">https://arxiv.org/pdf/2405.02224</a></span> Lectures on Resurgence in Integrable Field Theories</p>
+<p class="p2"><br></p>
+<p class="p2"><br></p>
+<p class="p1">20240507</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02704">https://arxiv.org/pdf/2405.02704</a></span> Higher-order topology protected by latent crystalline symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02402">https://arxiv.org/pdf/2405.02402</a></span> Spontaneous Strong Symmetry Breaking in Open Systems: Purification Perspective (Pablo Sala, Sarang Gopalakrishnan, Masaki Oshikawa, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.03172">https://arxiv.org/pdf/2405.03172</a></span> Dimensional reduction gauge and low-dimensionalization in four dimensional QCD</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.03459">https://arxiv.org/pdf/2405.03459</a></span> Revisiting the spatially inhomogeneous condensates in the (1 + 1)-dimensional chiral Gross-Neveu model via the bosonic two-point function in the infinite-N limit ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.03557">https://arxiv.org/pdf/2405.03557</a></span> The description of two-dimensional altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.03639">https://arxiv.org/pdf/2405.03639</a></span> Strong-to-Weak Spontaneous Symmetry Breaking in Mixed Quantum States (Leonardo A. Lessa, Ruochen Ma, Jian-Hao Zhang, Zhen Bi, Meng Cheng, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.02390">https://arxiv.org/pdf/2405.02390</a></span> Towards a classification of mixed-state topological orders in two dimensions (Tyler Ellison, Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2403.02279">https://arxiv.org/pdf/2403.02279</a></span> Graphene conductivity: Kubo model versus QFT-based model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.00037">https://arxiv.org/pdf/2310.00037</a></span> Solvable models for 2+1D quantum critical points: Loop soups of 1+1D conformal field theories (Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.12097">https://arxiv.org/pdf/2402.12097</a></span> Holographic dual effective field theory for an SYK model (Yoon-Seok Choun, Hyeon Jung Kim, and Ki-Seok Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20240508</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.04364">https://arxiv.org/pdf/2405.04364</a></span> Interplay between short-range and critical long-range fluctuations in the out-of-equilibrium behavior of the particle density at quantum transitions (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.04470">https://arxiv.org/pdf/2405.04470</a></span> Emergent Conformal Symmetry at the Multicritical Point of (2+1)D SO(5) Model with Wess-Zumino-Witten Term on Sphere (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.03940">https://arxiv.org/pdf/2405.03940</a></span> Remark on neutrino oscillations (Kazuo Fujikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.07286">https://arxiv.org/pdf/2310.07286</a></span> Symmetry-enforced many-body separability transitions (Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2401.02517">https://arxiv.org/pdf/2401.02517</a></span> Conformal invariance and composite operators: A strategy for improving the derivative expansion of the nonperturbative renormalization group</p>
+<p class="p2"><br></p>
+<p class="p1">20240509</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.04619">https://arxiv.org/pdf/2405.04619</a></span> Non-anomalous non-invertible symmetries in 1+1D from gapped boundaries of SymTFTs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.04863">https://arxiv.org/pdf/2405.04863</a></span> Three-dimensional higher-order saddle points induced flat bands in Co-based kagome metals</p>
+<p class="p2"><br></p>
+<p class="p1">20240510</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05442">https://arxiv.org/pdf/2405.05442</a></span> Switching between superconductivity and current density waves in Bernal bilayer graphene ***** (Jun Ho Son, Yi-Ting Hsu, Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05965">https://arxiv.org/pdf/2405.05965</a></span> Quantum Communication and Mixed-State Order in Decohered Symmetry-Protected Topological States **** (Zhehao Zhang, Utkarsh Agrawal, Sagar Vijay)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05302">https://arxiv.org/pdf/2405.05302</a></span> Illustrating the Categorical Landau Paradigm in Lattice Models (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05316">https://arxiv.org/pdf/2405.05316</a></span> Higher Berry Curvature from the Wave Function I: Schmidt Decomposition and Matrix Product States ***** (Ophelia Evelyn Sommer, Xueda Wen, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05323">https://arxiv.org/pdf/2405.05323</a></span> Higher Berry Curvature from the Wave function II: Locally Parameterized States Beyond One Dimension ***** (Ophelia Evelyn Sommer, Ashvin Vishwanath, Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05325">https://arxiv.org/pdf/2405.05325</a></span> Higher Berry Phase from Projected Entangled Pair States in (2+1) dimensions *** (Shuhei Ohyama, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05327">https://arxiv.org/pdf/2405.05327</a></span> Higher Berry Connection for Matrix Product States *** (Shuhei Ohyama, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05331">https://arxiv.org/pdf/2405.05331</a></span> Quantum Phases and Transitions in Spin Chains with Non-Invertible Symmetries (Arkya Chatterjee, O ̈mer M. Aksoy, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05339">https://arxiv.org/pdf/2405.05339</a></span> Optical Conductivity in Symmetric Mass Generation Insulators ***** (Meng Zeng, Fu Xu, Da-Chuan Lu, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05964">https://arxiv.org/pdf/2405.05964</a></span> Lattice Models for Phases and Transitions with Non-Invertible Symmetries (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2207.02203">https://arxiv.org/pdf/2207.02203</a></span> Noncrystalline topological superconductors (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.05863">https://arxiv.org/pdf/2405.05863</a></span> A TOUCH OF QUANTUM FIELD THEORY</p>
+<p class="p2"><br></p>
+<p class="p1">20240513</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06008">https://arxiv.org/pdf/2405.06008</a></span> Wilsonian Renormalization of Neural Network Gaussian Processes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06240">https://arxiv.org/pdf/2405.06240</a></span> Non-Bloch band theory of sub-symmetry-protected topological phases (Sonu Verma, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06287">https://arxiv.org/pdf/2405.06287</a></span> Topological phase diagram of the Haldane model on a Bishamon-kikko–honeycomb lattice (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06607">https://arxiv.org/pdf/2405.06607</a></span> SO(5) multicriticality in two-dimensional quantum magnets (Anders W. Sandvik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.14669">https://arxiv.org/pdf/2404.14669</a></span> Who told you magnetization is a vector in 4 − ε dimensions? ***** (Yu Nakayama)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2201.09397">https://arxiv.org/pdf/2201.09397</a></span> LIE GROUPS AND LIE ALGEBRAS *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2401.15263">https://arxiv.org/pdf/2401.15263</a></span> Macroscopic Irreversibility in Quantum Systems: ETH and Equilibration in a Free Fermion Chain (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06291">https://arxiv.org/pdf/2405.06291</a></span> Static Quantum Errors and Purification (Joonwoo Bae)</p>
+<p class="p2"><br></p>
+<p class="p1">20240514</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.07970">https://arxiv.org/pdf/2405.07970</a></span> How much entanglement is needed for emergent anyons and fermions? (Zhi Li, Dongjin Lee, Beni Yoshida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.06891">https://arxiv.org/pdf/2405.06891</a></span> Finite-size corrections to the energy spectra of gapless one-dimensional systems in the presence of boundaries (Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2311.12576">https://arxiv.org/pdf/2311.12576</a></span> Phi4tools: Compilation of Feynman diagrams for Landau-Ginzburg-Wilson theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.01388">https://arxiv.org/pdf/2404.01388</a></span> Electrical conductivity of hot relativistic plasma in a strong magnetic field</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.07433">https://arxiv.org/pdf/2405.07433</a></span> Efficient soft-output decoders for the surface code (John Preskill)</p>
+<p class="p2"><br></p>
+<p class="p1">20240515</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08056">https://arxiv.org/pdf/2405.08056</a></span> An Area Law for Entanglement Entropy in Particle Scattering ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08072">https://arxiv.org/pdf/2405.08072</a></span> Random Bond perturbations of the O(2) vector model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08273">https://arxiv.org/pdf/2405.08273</a></span> From the Quantum Breakdown Model to the Lattice Gauge Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08093">https://arxiv.org/pdf/2405.08093</a></span> Global anomalies of Green’s function zeros ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08198">https://arxiv.org/pdf/2405.08198</a></span> Generalized Hertz action and quantum criticality of two-dimensional Fermi systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08817">https://arxiv.org/pdf/2405.08817</a></span> Quantum oscillations in the hole-doped cuprates and the confinement of spinons ***** (Pietro M. Bonetti, Maine Christos, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08499">https://arxiv.org/pdf/2405.08499</a></span> Z2 order fractionalization, topological phase transition, and odd frequency pairing in an exactly solvable spin-charge ladder</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08571">https://arxiv.org/pdf/2405.08571</a></span> Mean-field theory of first-order quantum superconductor-insulator transition</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08286">https://arxiv.org/pdf/2405.08286</a></span> Plaquette Models, Cellular Automata, and Measurement-induced Criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.08722">https://arxiv.org/pdf/2405.08722</a></span> Bohr and von Neumann on the Universality of Quantum Mechanics: Materials for the History of the Quantum Measurement Process</p>
+<p class="p2"><br></p>
+<p class="p1">20240516</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09217">https://arxiv.org/pdf/2405.09217</a></span> Augmenting Density Matrix Renormalization Group with Clifford Circuits</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09450">https://arxiv.org/pdf/2405.09450</a></span> Space of non-Fermi liquids ***** (Shubham Kukreja, Afshin Besharat, Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2312.11188">https://arxiv.org/pdf/2312.11188</a></span> Detecting Quantum Anomalies in Open Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.04470">https://arxiv.org/pdf/2405.04470</a></span> Emergent Conformal Symmetry at the Multicritical Point of (2+1)D SO(5) Model with Wess-Zumino-Witten Term on Sphere (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2401.04180">https://arxiv.org/pdf/2401.04180</a></span> Universal relation between energy gap and dielectric constant *** (Yugo Onishi, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09007">https://arxiv.org/pdf/2405.09007</a></span> Discrete Gauge Anomalies and Instantons ***** (Piljin Yi)</p>
+<p class="p2"><br></p>
+<p class="p1">20240517</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09616">https://arxiv.org/pdf/2405.09616</a></span> Theory of possible sliding regimes in twisted bilayer WTe2 ***** (Yi-Ming Wu, Chaitanya Murthy, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.10015">https://arxiv.org/pdf/2405.10015</a></span> Non-Hermitian Topology in Hermitian Topological Matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09834">https://arxiv.org/pdf/2405.09834</a></span> Topological Floquet engineering of a three-band optical lattice with dual-mode resonant driving (Y. Shin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09751">https://arxiv.org/pdf/2405.09751</a></span> Gravitational Chern-Simons form and Chiral Gravitational Anomaly in Fluid Mechanics (P.B. Wiegmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09754">https://arxiv.org/pdf/2405.09754</a></span> Fermionic Non-Invertible Symmetries in (1+1)d: Gapped and Gapless Phases, Transitions, and Symmetry TFTs (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.09611">https://arxiv.org/pdf/2405.09611</a></span> Fermionic quantum criticality through the lens of topological holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14063">https://arxiv.org/pdf/2402.14063</a></span> Absence of localization in Weyl semimetals (A.A. Burkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2403.17069">https://arxiv.org/pdf/2403.17069</a></span> Tensor network formulation of symmetry protected topological phases in mixed states ***** (Hanyu Xue, Jong Yeon Lee, Yimu Bao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.10108">https://arxiv.org/pdf/2405.10108</a></span> Quantum Field Theory in Curved Spacetime Approach to the Backreaction of Dynamical Casimir Effect</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14097">https://arxiv.org/pdf/2402.14097</a></span> Introductory visual lecture on QCD at large-Nc: bound states, chiral models, and phase diagram</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
