20240520_publication_CV_update
publication list and CV update

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 <!-- NEWS -->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
+	--><li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
+			</li>
+			<li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
 		</li>
 		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
 				</li>
@@ -116,7 +118,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240429_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/04/29)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240520_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/05/20)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -144,11 +146,21 @@ Articles related to my works:
 		  <div class="sign3" style="display: inline-block;">W</div>
 		  <div class="sign1" style="display: inline-block;float: left;">N</div>
 		  <div class="sign2" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2403.09627" style="text-decoration:none;color:var(--font-color)">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a>
+		  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2403.09627" style="text-decoration:none;color:var(--font-color)">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> <div class="bouncing-text" style="display: inline-block;">
+		  <div class="Psign9" style="display: inline-block;">D</div>
+		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
+		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
+		  <div class="Psign3" style="display: inline-block;float: left;">B</div>
+		  <div class="Psign4" style="display: inline-block;float: left;">L</div>
+		  <div class="Psign5" style="display: inline-block;float: left;">I</div>
+		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
+		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
+		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
+		  <div class="shadow"></div>
 							</span>
 						<span class="cvperiod"></span></div>
 						<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
-					<a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="text-decoration:none;color:var(--font-color)">Accepted in Phys. Rev. D</a> (<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+					<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026">Phys. Rev. D <b>109</b>, 096026 (2024)</a> (<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
 		    <!--<img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >-->
