--- a/arxiv/2024_05_arxiv.html
+++ b/arxiv/2024_05_arxiv.html
@@ -160,6 +160,36 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2403.17069">https://arxiv.org/pdf/2403.17069</a></span> Tensor network formulation of symmetry protected topological phases in mixed states ***** (Hanyu Xue, Jong Yeon Lee, Yimu Bao)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.10108">https://arxiv.org/pdf/2405.10108</a></span> Quantum Field Theory in Curved Spacetime Approach to the Backreaction of Dynamical Casimir Effect</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14097">https://arxiv.org/pdf/2402.14097</a></span> Introductory visual lecture on QCD at large-Nc: bound states, chiral models, and phase diagram</p>
+<br>
+<p class="p1">20240520</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.10899">https://arxiv.org/pdf/2405.10899</a></span> Witnessing Entanglement and Quantum Correlations in Condensed Matter: A Review</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2403.16978">https://arxiv.org/pdf/2403.16978</a></span> Locally Purified Density Operators for Symmetry-Protected Topological Phases in Mixed States (Zhen Bi)</p>
+<p class="p2"><br></p>
+<p class="p1">20240521</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.11663">https://arxiv.org/pdf/2405.11663</a></span> Crumpled-to-flat transition of quenched disordered membranes at two-loop order</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.11653">https://arxiv.org/pdf/2405.11653</a></span> Direct imaging of asymmetric interfaces and electrostatic potentials inside a hafnia-zirconia ferroelectric nanocapacitor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.12214">https://arxiv.org/pdf/2405.12214</a></span> Tunable Spatiotemporal Orders in Driven Insulators (Premala Chandra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.11348">https://arxiv.org/pdf/2405.11348</a></span> Chiral symmetry and Atiyah-Patodi-Singer index theorem for staggered fermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.11719">https://arxiv.org/pdf/2405.11719</a></span> Non-Abelian Self-Correcting Quantum Memory **** (Po-Shen Hsin, Ryohei Kobayashi, Guanyu Zhu)</p>
+<p class="p2"><br></p>
+<p class="p1">20240522</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.12279">https://arxiv.org/pdf/2405.12279</a></span> Eigenstate localization in a many-body quantum system **** (Chao Yin, Rahul Nandkishore, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.12558">https://arxiv.org/pdf/2405.12558</a></span> Entanglement transitions in SU(1,1) quantum dynamics: applications to Bose-Einstein condensates and periodically driven coupled oscillators (Heng-Hsi Li, Po-Yao Chang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.12278">https://arxiv.org/pdf/2405.12278</a></span> Emergent Majorana Metal from a Chiral Spin Liquid ***</p>
+<p class="p3"><a href="https://arxiv.org/pdf/2405.12298">https://arxiv.org/pdf/2405.12298</a><span class="s2"> Magnetic superconductivity</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2311.18417">https://arxiv.org/pdf/2311.18417</a></span> Statistical Field Theory and Neural Structures Dynamics IV: Field-Theoretic Formalism for Interacting Collective States</p>
+<p class="p2"><br></p>
+<p class="p1">20240524</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.14830">https://arxiv.org/pdf/2405.14830</a></span> Deep learning lattice gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.13277">https://arxiv.org/pdf/2405.13277</a></span> Topology Obstructing Anderson Localization of Light **** (Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.14811">https://arxiv.org/pdf/2405.14811</a></span> Interacting phase diagram of twisted bilayer MoTe2 in magnetic field (Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.14844">https://arxiv.org/pdf/2405.14844</a></span> Electric, thermal, and thermoelectric magnetoconductivity for Weyl/multi-Weyl semimetals in planar Hall set-ups induced by the combined effects of topology and strain (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.14825">https://arxiv.org/pdf/2405.14825</a></span> Lindbladian way for the relaxation time approximation, application to Kibble - Zurek processes due to environment temperature quench, and to Lindbladian perturbation theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.13189">https://arxiv.org/pdf/2405.13189</a></span> Boundary Effects and Confinement in the Theory of Nonabelian Gauge Fields</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.13886">https://arxiv.org/pdf/2405.13886</a></span> Quantum Energy Teleportation versus Information Teleportation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.13105">https://arxiv.org/pdf/2405.13105</a></span> Non-invertible and higher-form symmetries in 2+1d lattice gauge theories (Yichul Choi, Yaman Sanghavi, Shu-Heng Shao, Yunqin Zheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2405.13309">https://arxiv.org/pdf/2405.13309</a></span> Spin Green’s Function Approach to Understanding Localized Majorana Fermions in the Kitaev Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2311.18831">https://arxiv.org/pdf/2311.18831</a></span> Schwinger-Dyson equation on the complex plane − A four-fermion interaction model at finite temperature −</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
