--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 <!-- NEWS -->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
+	--></li>
+		<li><b>[Jun. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2406.01681" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been posted on arXiv!
+				</li>
+		<li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
 			</li>
 			<li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
 		</li>
@@ -118,7 +121,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240520_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/05/20)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240605_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/06/05)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -140,13 +143,32 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul>
+					<li><div class="paper_title" style="display: flex;">
+					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+			  <div class="sign3" style="display: inline-block;">W</div>
+			  <div class="sign1" style="display: inline-block;float: left;">N</div>
+			  <div class="sign2" style="display: inline-block;float: left;">E</div>
+			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2406.01681" style="text-decoration:none;color:var(--font-color)">"
+Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking
+"</a>
+								</span>
+							<span class="cvperiod"></span></div>
+							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
+						<a href="https://arxiv.org/abs/2406.01681">arXiv:2406.01681</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+			  <label>
+			    <input type="checkbox">
+			  </label>
+			</div> We construct and study the relativistic Gross-Neveu-Yukawa field theory for the $\text{SO}(2N)$ real symmetric second-rank tensor order parameter coupled to $N_f$ flavors of $4N$-component Majorana fermions in 2+1 dimensions. Such a tensor order parameter unifies all Lorentz-invariant mass-gap orders for $N$ two-component Dirac fermions in two dimensions except for the $\text{SO}(2N)$-singlet anomalous quantum Hall state. The value $N_f=1$ corresponds to the canonical Gross-Neveu model. Within the leading-order $\epsilon$-expansion around the upper critical dimension of $3+1$ the field theory exhibits a critical fixed point in its renormalization group flow which describes spontaneous symmetry breaking to $\text{SO}(N)\times \text{SO}(N)$ for the number of flavors of Majorana fermions higher than a critical value $N_{f,c2}\approx 2N$. For $N_{f, c1}< N_f < N_{f,c2}$ , with $N_{f,c1} \approx 1.080 N$ the critical fixed point resides in the unstable region of the theory where the effective potential is unbounded from below, whereas for $N_f < N_{f,c1}$ there is no real critical fixed point, and the flow runs away. In either case, for $N_f < N_{f,c2}$ the transition should become fluctuation-induced first-order, and we discuss the dependence of its size on the parameters in the theory. One-loop critical exponents for the new universality class at $N_{f, c2}< N_f $ are computed and the flow diagram in various regimes is discussed.
+			</span></details></div>
+					</li>
+			<!-- -->
 		<!-- -->
 				<li><div class="paper_title" style="display: flex;">
 				<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 		  <div class="sign3" style="display: inline-block;">W</div>
 		  <div class="sign1" style="display: inline-block;float: left;">N</div>
 		  <div class="sign2" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2403.09627" style="text-decoration:none;color:var(--font-color)">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> <div class="bouncing-text" style="display: inline-block;">
+		  <div class="shadow"></div></div>&nbsp<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="text-decoration:none;color:var(--font-color)">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> <div class="bouncing-text" style="display: inline-block;">
 		  <div class="Psign9" style="display: inline-block;">D</div>
 		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
 		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
@@ -163,11 +185,12 @@ Articles related to my works:
 					<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026">Phys. Rev. D <b>109</b>, 096026 (2024)</a> (<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
-		    <!--<img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >-->
 		  </label>
 		</div> The canonical Gross-Neveu model for $N$ two-component Dirac fermions in $2+1$ dimensions suffers a continuous phase transition at a critical interaction $g_{c1} \sim 1/N$ at large $N$, at which its continuous symmetry $\text{SO}(2N)$ is preserved and a discrete (Ising) symmetry becomes spontaneously broken. A recent mean-field calculation, however, points to an additional transition at a diffferent critical $g_{c2}\sim -N g_{c1}$, at which $\text{SO}(2N) \rightarrow \text{SO}(N) \times \text{SO}(N)$. To study the latter phase transition we rewrite the Gross-Neveu interaction $g (\bar{\psi} \psi)^2$ in terms of three different quartic terms for the single ($L=1$) $4N$-component real (Majorana) fermion, and then extend the theory to $L>1$. This allows us to track the evolution of the fixed points of the renormalization group transformation starting from $L\gg 1$, where one can discern three distinct critical points which correspond to continuous phase transitions into (1) $\text{SO}(2N)$-singlet mass-order-parameter, (2) $\text{SO}(2N)$-symmetric-tensor mass-order-parameters, and (3) $\text{SO}(2N)$-adjoint nematic-order-parameters, down to $L=1$ value that is relevant to standard Gross-Neveu model. Below the critical value of $L_c (N)\approx  0.35 N$ for $N\gg1$ only the Gross-Neveu critical point (1) still implies a diverging susceptibility for its corresponding  ($\text{SO}(2N)$-singlet) order parameter, whereas the two new  critical points that existed at large $L$ ultimately become equivalent to the Gaussian fixed point at $L=1$. We interpret this metamorphosis of the $\text{SO}(2N)$-symmetric-tensor fixed point from critical to spurious as an indication that the transition at $g_{c2}$ in the original Gross-Neveu model is turned first-order by fluctuations.
 		</span></details></div>
 				</li>
+		<!-- -->
+				<!-- -->
 						<li><div class="paper_title" style="display: flex;">
 						<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 				  <div class="sign3" style="display: inline-block;">W</div>
