--- a/last.html
+++ b/last.html
@@ -39,7 +39,7 @@
 <body style="background-color: var(--bg-color)">
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2024-05-20</div>
+<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2024-05-26/div>
 
 </div>
 </body>
